@@ -42,6 +42,7 @@
 31. If using table-style play queue, then only sort one column at a time.
 32. Stop user MPD instance from GUI thread when terminating, to ensure state
     can be saved.
+33. Don't write empty genres to tags.
 
 2.4.2
 -----
